<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.reserve.ChooseProductFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/LayoutPrincipal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical">

                    <!-- Primer producto -->
                    <CheckBox
                        android:id="@+id/chkUno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cremaBarba"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtMarcaUno"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:text="@string/imperial" />

                        <TextView
                            android:id="@+id/txtCostoUno"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/cienPesos" />

                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/chkDos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pomadaBarba"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:text="@string/imperial" />

                        <TextView
                            android:id="@+id/txtCostoDos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/cienPesos" />

                    </LinearLayout>

                    <!-- Tercer producto -->
                    <CheckBox
                        android:id="@+id/chkTres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/crema"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:text="@string/conchaNacar" />

                        <TextView
                            android:id="@+id/txtCostoTres"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/ochentaPesos" />

                    </LinearLayout>

                    <!-- Cuarto producto -->
                    <CheckBox
                        android:id="@+id/chkCuatro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/balsamoBarba"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:text="@string/donPorfirio" />

                        <TextView
                            android:id="@+id/txtCostoCuatro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/cienPesos" />

                    </LinearLayout>

                    <!-- Quinto producto -->
                    <CheckBox
                        android:id="@+id/chkCinco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/polvoVolum"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:text="@string/cuatroCuatro" />

                        <TextView
                            android:id="@+id/txtCostoCinco"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/cientoCincuentaPesos" />

                    </LinearLayout>

                    <!-- Sexto producto -->
                    <CheckBox
                        android:id="@+id/chkSeis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fibraCabello"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:text="@string/toppik" />

                        <TextView
                            android:id="@+id/txtCostoSeis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/ochentaPesos" />

                    </LinearLayout>

                    <!-- Séptimo producto -->
                    <CheckBox
                        android:id="@+id/chkSiete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shampooBarba"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:text="@string/graveBefore" />

                        <TextView
                            android:id="@+id/txtCostoSiete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/cientoTreintaPesos" />

                    </LinearLayout>

                    <!-- Octavo producto -->
                    <CheckBox
                        android:id="@+id/chkOcho"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cera"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:text="@string/fisticuffs" />

                        <TextView
                            android:id="@+id/txtCostoOcho"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/cientoVeintePesos" />

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>