<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.reservations.ChooseServiceFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/LayoutPrincipal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:id="@+id/radioGroupServicios"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp" >

                    <!-- Primer servicio -->
                        <RadioButton
                            android:id="@+id/rbtUno"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/corteDesvan"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtDuracionUno"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30dp"
                                android:text="@string/cuarentaSesenta" />

                            <TextView
                                android:id="@+id/txtCostoUno"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:text="@string/cienPesos" />

                    </LinearLayout>

                    <!-- Segundo servicio -->
                        <RadioButton
                            android:id="@+id/rbtDos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/arregloBarba"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30dp"
                                android:text="@string/treinta" />

                            <TextView
                                android:id="@+id/txtCostoDos"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:text="@string/cientoCincuentaPesos" />

                    </LinearLayout>

                    <!-- Tercer servicio -->
                        <RadioButton
                            android:id="@+id/rbtTres"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/corteEscolar"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30dp"
                                android:text="@string/treinta" />

                            <TextView
                                android:id="@+id/txtCostoTres"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:text="@string/ochentaPesos" />

                    </LinearLayout>

                    <!-- Cuarto servicio -->
                        <RadioButton
                            android:id="@+id/rbtCuatro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/afeitadoExp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30dp"
                                android:text="@string/quinceVeinte" />

                            <TextView
                                android:id="@+id/txtCostoCuatro"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:text="@string/noventaPesos" />

                    </LinearLayout>

                    <!-- Quinto servicio -->
                        <RadioButton
                            android:id="@+id/rbtCinco"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/disenos"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:id="@+id/txtCostoCinco"
                            android:text="El tiempo y el costo dependen del servicio solicitado" />

                    <!-- Sexto servicio -->
                        <RadioButton
                            android:id="@+id/rbtSeis"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/arregloCeja"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30dp"
                                android:text="@string/diez" />

                            <TextView
                                android:id="@+id/txtCostoSeis"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:text="@string/cienPesos" />

                    </LinearLayout>

                    <!-- Séptimo servicio -->
                        <RadioButton
                            android:id="@+id/rbtSiete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mascarillaFac"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30dp"
                                android:text="@string/sesenta" />

                            <TextView
                                android:id="@+id/txtCostoSiete"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:text="@string/cientoTreintaPesos" />

                    </LinearLayout>

                </RadioGroup>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
